src/test/resources/nox/errors/err_quota.nox
// @test:error "QuotaExceededError"
main() {
    while (true) {}
}
